# bmbp_orm

./: .gitignore  Cargo.toml  README.md
src/: conn.rs  ds.rs  error.rs  lib.rs  orm.rs  pool.rs  row.rs
src/adapter/: mod.rs  mysql_adapter.rs
src/bean/: mod.rs  row.rs  row_pg.rs
src/client/: mod.rs
src/client/mysql/: conn.rs  mod.rs  pool.rs
src/client/oracle/: conn.rs  pool.rs
src/client/pg/: conn.rs  pool.rs
src/client/sqlite/: conn.rs  pool.rs
tests/: test_orm.rs
