[package]
name = "bmbp_orm"
version = "0.0.0"
edition = "2021"

[dependencies]
bmbp_sql = { path = "../bmbp_sql" }

r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
r2d2_postgres = "0.18.1"
r2d2_mysql = "25.0.0"
r2d2_sqlite = "0.25.0"
r2d2-oracle = "0.7.0"
r2d2_odbc = "0.5.0"
tokio-postgres = "0.7.12"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.82"