[package]
name = "bmbp_orm"
version = "0.0.1"
edition = "2021"

[dependencies]
bmbp_sql = { workspace = true }
bb8 = "0.8.6"
bb8-postgres = "0.8.1"
bb8-sqlite = "0.1.0"
bb8-oracle = "0.1.0"
mysql_async = "0.34.2"
rusqlite = "0.28.0"
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4", "with-bit-vec-0_6", "with-time-0_3", "with-serde_json-1"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.82"
async-trait = "0.1.83"
tokio = { workspace = true }
once_cell = "1.20.2"
bmbp_rdbc_type = { workspace = true }