[package]
name = "bmbp_orm"
version = "0.0.1"
edition = "2021"

[dependencies]
bmbp_sql = { workspace = true }
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
bb8-oracle = { version = "0.2.0", features = ["chrono"] }
mysql_async = "0.34.2"
rusqlite = "0.32.1"
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4", "with-bit-vec-0_6", "with-time-0_3", "with-serde_json-1"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.82"
async-trait = "0.1.83"
tokio = { workspace = true }
once_cell = "1.20.2"
tracing = "0.1.41"
chrono = { workspace = true }